--- a/EntityFramework_MySql/appsettings.json
+++ b/EntityFramework_MySql/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "mysqlConnection": "server=localhost;userid=test;port=3306;database=mysql;sslmode=none;"
+  },
   "AllowedHosts": "*"
 }
